static/style/style.scss
html * {
    font-size: 1.7dvmin;
    color: #000;
    font-family: Arial;
}

body {
    background-image: url("../img/background.png");
    background-size: 100dvw 100dvh;
    background-repeat: no-repeat;
}

.overlay {
    position: fixed;
    left: 0;
    top: 0;
    width: 100dvw;
    height: 100dvh;
    display: none;

    &.active {
        display: block !important;
    }
}

// ----- header div positions -----
.header {
    position: fixed;
    display: flex;
    align-items: flex-end; // align items to the bottom of the panel
    height: fit-content;
    gap: 0.2dvw;

    &#ram-options {
        left: 2dvw;
        top: 1dvh;
    }

    &#ram-control-options {
        left: 12dvw;
        top: 1dvh;

        input[type="range"] {
            width: 8dvw;
        }
    }

    &#control-unit-toggle {
        left: 40dvw;
        top: 1dvh;
    }

    &#mc-options {
        left: 50dvw;
        top: 1dvh;
    }

    &#mc-record-panel {
        left: 60dvw;
        top: 1dvh;

        .input-group {
            display: flex;
            flex-direction: column;
            gap: 0.2dvh;

            input {
                padding: 0;
                width: 7dvw;
            }
        }

        &.recording {
            background-color: red;
            box-shadow:
                0 0 0.6rem 5px rgba(255, 0, 0, 0.9),
                0 0 1.2rem 5px rgba(255, 0, 0, 0.6);
            animation: pulse 1.5s infinite ease-in-out;
        }

        @keyframes pulse {
            0% {
                opacity: 1;
            }

            50% {
                opacity: 0.4;
            }

            100% {
                opacity: 1;
            }
        }
    }

    &#simulator-options {
        left: 85dvw;
        top: 1dvh;
    }

    .icon {
        width: 5dvmin;
        height: 5dvmin;

        &:hover {
            cursor: pointer;
            filter: brightness(0.8);
        }
    }
}

// ----- manaual inputs -----
.manual-input {
    position: fixed;
    left: 5dvw;

    &#ab-manual-input {
        top: 13dvh;
        width: 5dvw;
    }

    &#ab-manual-button {
        top: 15.5dvh;
    }

    &#db-manual-input {
        top: 93dvh;
        width: 5dvw;
    }

    &#db-manual-button {
        top: 95.5dvh;
    }
}

// ----- field positions -----
.field {
    position: fixed;
    font-size: 3dvmin;
    color: white;
    transform: translate(-50%, -50%);

    &#ab-field {
        left: 50dvw;
        top: 13dvh;
    }

    &#db-field {
        left: 50dvw;
        top: 92.5dvh;
    }

    &#acc-field {
        left: 91dvw;
        top: 48.5dvh;
    }

    &#ins-field {
        left: 49.5dvw;
        top: 37dvh;

        span {
            font-size: inherit;
        }

        #ins-high {
            color: red;
        }

        #ins-low {
            color: #207DFF;
        }
    }

    &#pc-field {
        left: 67.8dvw;
        top: 36.5dvh;
    }

    &#mc-field {
        left: 46.3dvw;
        top: 54.3dvh;
    }
}

// ----- button positions -----
.button {
    position: fixed;
    min-width: 5dvw;
    white-space: nowrap;
    transform: translate(-50%, -50%);

    &.active {
        background-color: #3aa0ff;
        color: #fff;
        box-shadow:
            0 0 0.6rem rgba(58, 160, 255, 0.9),
            0 0 1.2rem rgba(58, 160, 255, 0.6);
    }

    &#ram-db-button {
        left: 23.5dvw;
        top: 86dvh;
    }

    &#db-ram-button {
        left: 17dvw;
        top: 86dvh;
    }

    &#db-acc-button {
        left: 80.5dvw;
        top: 63dvh;
    }

    &#acc-db-button {
        left: 91.5dvw;
        top: 63dvh;
    }

    &#acc-add-button {
        left: 80.5dvw;
        top: 66dvh;
    }

    &#acc-sub-button {
        left: 80.5dvw;
        top: 69dvh;
    }

    &#acc-inc-button {
        left: 90.5dvw;
        top: 27dvh;
    }

    &#acc-dec-button {
        left: 90.5dvw;
        top: 30dvh;
    }

    &#acc-null-button {
        left: 90.5dvw;
        top: 33dvh;
    }

    &#db-ins-button {
        left: 39dvw;
        top: 60dvh;
    }

    &#ins-pc-button {
        left: 58dvw;
        top: 39.8dvh;
    }

    &#ins-ab-button {
        left: 51.7dvw;
        top: 27dvh;
    }

    &#ins-mc-button {
        left: 46.7dvw;
        top: 49dvh;
    }

    &#pc-ab-button {
        left: 67.8dvw;
        top: 27dvh;
    }

    &#pc-inc-button {
        left: 68dvw;
        top: 46dvh;
    }

    &#pc-inc-null-button {
        left: 68dvw;
        top: 49dvh;
    }

    &#mc-null-button {
        left: 63.5dvw;
        top: 80dvh;
    }

    &#mc-stop-button {
        left: 63.5dvw;
        top: 83dvh;
    }

    &#add-row-above-button {
        left: 10dvw;
        top: 80dvh;
    }

    &#delete-row-button {
        left: 10dvw;
        top: 83dvh;
    }
}

// ----- ram input positions -----
.ram-input {
    position: fixed;
    left: 0.5dvw;
    top: 45dvh;
    width: 8dvw;
    height: 18dvh;
    background-image: url("../img/ram-input.png");
    background-size: 100% 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;

    * {
        width: 5dvw;
        height: 2.5dvh;
        margin-left: 0.3dvw;
        margin-top: 0.2rem;
        padding: 0;
    }
}

// ----- tables -----
table {
    width: 100%;
    border: 2px solid black;

    th {
        position: sticky;
        top: 0;
        background-color: #969696;
    }

    tr:nth-child(even) {
        background-color: gainsboro;
    }

    tr:nth-child(odd) {
        background-color: white;
    }

    tr.selected {
        background-color: yellow;
    }

    tr.last-executed {
        background-color: #00F45D;
    }

    tr.highlight {
        background-color: red;
    }
}

#ram-table-container {
    position: fixed;
    left: 9dvw;
    top: 26dvh;
    height: 50dvh;
    width: 23dvw;
    overflow-y: auto;
}

#microcode-table-container {
    position: fixed;
    left: 45dvw;
    top: 58.7dvh;
    height: 28dvh;
    width: 15dvw;
    overflow-y: auto;
}

// ----- control unit elements -----
.control-unit-element.hidden {
    display: none !important;
}

